hard code value for scrollbar to tabbar ratio, tdf#89058

The regression was introduced with
1d1d1c62caf2ee6a96946e96d782e03f3ef80439 which traded interoperability
for some UX "gain".

Change-Id: I36517fc550e12714ad5855ce0bc5883f7a948a51